@@ -1,3 +1,12 @@
+2011-05-11  Ivan Maidanski  <ivmai@mail.ru> (mostly really Ludovic Courtes)
+
+	* tests/threadkey_test.c: New file.
+	* .cvsignore (threadkey_test): Add.
+	* tests/tests.am (TESTS, check_PROGRAMS): Add 'threadkey_test'.
+	* tests/tests.am (threadkey_test_SOURCES, threadkey_test_LDADD):
+	New variable.
+	* Makefile.in: Regenerate.
+
 2011-05-11  Ivan Maidanski  <ivmai@mail.ru>
 
 	* pthread_support.c (GC_unregister_my_thread_inner): Don't call
